--- a/index.html
+++ b/index.html
@@ -766,14 +766,14 @@ select.form-control {
                     
                     <div class="form-group">
                         <label for="limit" style="font-weight: bold;">QUANTITY</label>
-                        <input type="number" id="limit" class="form-control" min="1" max="100" value="10" placeholder="Max 50" required>
+                        <input type="number" id="limit" class="form-control" min="1" max="50" value="10" placeholder="Max 50" required>
                     </div>
                 </div>
                 
                 <div class="form-group validation-group">
                     <label class="form-check">
                         <input type="checkbox" id="validateProxies" class="form-check-input" nochecked>
-                        <span class="form-check-label" style="font-weight: bold;">jika tidak terjadi masalah ini tidak usah di centang</span>
+                        <span class="form-check-label" style="font-weight: bold;"></span>
                                         <div class="select-info">saat pemilihan daftar negara,skip saja bagian random</div>
                     </label>
                 </div>
