--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ select.form-control {
 <script>
     // Constants
     const DEFAULT_PROXY_BANK_URL = 'https://raw.githubusercontent.com/xiyosenstore/hompage/refs/heads/main/ProxyList%20(1)%20(1).txt';
-    const PROXY_CHECK_API_URL = 'https://afrcloud.dpdns.org/${proxy.ip}:${proxy.port}';
+    const PROXY_CHECK_API_URL = 'https://api.jb8fd7grgd.workers.dev/';
     
       const MainDomains = [
         'blackshadow.dpdns.org',
