--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ select.form-control {
     
       const MainDomains = [
         'blackshadow.dpdns.org',
-        '-'
+        'balckwolf.dpdns.org'
     ];
 
     const CustomBugs = [];
