--- a/index.html
+++ b/index.html
@@ -715,6 +715,7 @@ select.form-control {
                 <label for="formatType">FORMAT TYPE</label>
                 <select id="formatType" class="form-control" required>
                         <option value="singbox">SINGBOX</option>
+                    <option value="clash">Proxy_Provider CLASH</option>
                     <option value="v2ray">V2RAY Account</option>
                   <option value="nekobox">NEKOBOX</option>
                 </select>
