--- a/index.html
+++ b/index.html
@@ -713,9 +713,9 @@ select.form-control {
             <div class="form-group">
                 <label for="formatType">FORMAT TYPE</label>
                 <select id="formatType" class="form-control" required>
-                        <option value="singbox">SINGBOX</option>
                     <option value="v2ray">V2RAY Account</option>
-                    <option value="clash">Proxy_Provider CLASH</option>
+                  <option value="singbox">SINGBOX</option>
+        <option value="clash">Proxy_Provider CLASH</option>
                   <option value="nekobox">NEKOBOX</option>
                 </select>
             </div>
@@ -745,12 +745,17 @@ select.form-control {
                 <label for="customBug">CUSTOM BUG</label>
                 <input type="text" id="customBug" class="form-control" placeholder="Example : BUG-WLG.COM, BUG-VIU.COM, BUG-ZOOM.COM">
                 <div class="select-info">Pisah Dengan Koma Jika Ingin Banyak BUG sekaligus</div>
-                <div class="select-info">contoh : ava.game.naver.com, quiz.vidio.com ,graph.instagram.com, zaintest.vuclip.com, support.zoom.us,untuk wc domain aktif di domain balckwolf.dpdns.org</div>
+                <div class="select-info">contoh : ava.game.naver.com, quiz.vidio.com ,graph.instagram.com, zaintest.vuclip.com, support.zoom.us</div>
             </div>
             
             <div class="form-group">
                 <label for="tls">TLS ENCRYPTION</label>
                 <select id="tls" class="form-control">
+                    <option value="true">port 443</option>
+                    <option value="false">port 80</option>
+                </select>
+            </div>
+            
                 <div class="form-row">
                     <div class="form-group">
                         <label for="country" style="font-weight: bold;">REGION FILTER</label>
@@ -811,6 +816,7 @@ select.form-control {
         </div>
     </div>
 </div>
+
 <footer class="footer">
     <div class="circuit-line circuit-line-1"></div>
     <div class="circuit-line circuit-line-2"></div>
