--- a/index.html
+++ b/index.html
@@ -705,6 +705,7 @@ select.form-control {
                 <label for="configType">PROTOCOL TYPE</label>
                 <select id="configType" class="form-control" required>
                      <option value="vless">VLESS</option>
+                    <option value="vless">VMESS</option>
                     <option value="trojan">TROJAN</option>
                     <option value="shadowsocks">SHADOWSOCKS</option>
                 </select>
@@ -722,7 +723,7 @@ select.form-control {
             
             <div class="form-group uuid-group">
                 <label for="uuid">UUID</label>
-                <input type="text" id="uuid" class="form-control" value="fc60147e-76b8-4bc5-b691-90b2da79e3d2" required>
+                <input type="text" id="uuid" class="form-control" value="2bcfbfba-b446-4ad5-93ad-72af9e008f61" required>
             </div>
             
             <div class="form-group">
